Add calculation of current expenses

--- a/src/app/calculator-form.component.html
+++ b/src/app/calculator-form.component.html
@@ -1,3 +1,4 @@
+{{diagnostic}}
 <div class="container">
   <h1>Trip Calculator</h1>
 
@@ -28,16 +29,33 @@
     </div>
 
     <div class="form-group">
+      <label for="foodTrip">Food</label>
+      <input type="number" class="form-control" id="foodTrip"
+             required
+             [(ngModel)]="model.expenses.trip.food" name="food">
+    </div>
+
+    <div class="form-group">
       <label for="activities">Activities</label>
       <input type="number" class="form-control" id="activities"
              required
              [(ngModel)]="model.expenses.trip.activities" name="activities">
     </div>
-
   </form>
+
+  <p *ngIf="totalTrip">Estimated Trip Total: {{totalTrip | currency:'USD':true}}
 
   <h3>Current Expenses</h3>
   <form>
+    <!--<div class="form-group">
+      <label for="rate">Rate</label>
+      <select class="form-control" id="rate"
+              required
+              [(ngModel)]="model.expenses.current.rate" name="rate">
+        <option *ngFor="let rate of rates" [value]="rate">{{rate}}</option>
+      </select>
+    </div>-->
+
     <div class="form-group">
       <label for="rent">Rent</label>
       <input type="number" class="form-control" id="rent"
@@ -48,20 +66,28 @@
     <div class="form-group">
       <label for="utilities">Utilities</label>
       <input type="number" class="form-control" id="utilities"
-             required>
+             required
+             [(ngModel)]="model.expenses.current.utilities" name="utilities">
     </div>
 
     <div class="form-group">
       <label for="food">Food</label>
       <input type="number" class="form-control" id="food"
-             required>
+             required
+             [(ngModel)]="model.expenses.current.food" name="food">
     </div>
 
     <div class="form-group">
       <label for="fun">Fun</label>
-      <input type="number" class="form-control" id="fun">
+      <input type="number" class="form-control" id="fun"
+             required
+             [(ngModel)]="model.expenses.current.fun" name="fun">
     </div>
   </form>
+
+  <p *ngIf="totalCurrent">Burn rate per day: {{totalCurrent | currency:'USD':true}}</p>
+
+  <button type="submit" class="btn btn-default" (click)="onSubmit()">Submit</button>
 
   <h3>Ongoing Expenses</h3>
   <form>
