--- a/src/app/calculator-form.component.html
+++ b/src/app/calculator-form.component.html
@@ -1,10 +1,16 @@
-{{diagnostic}}
 <div class="container">
   <h1>Trip Calculator</h1>
 
   <div class="row">
     <div class="col-md-6">
       <h3>Income</h3>
+    </div>
+    <div class="col-md-6">
+      <h3>Money For Trip</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
       <form>
         <div class="form-group">
           <label for="monthly-income">Income per Month</label>
@@ -16,7 +22,6 @@
       <p *ngIf="dailyIncome">Daily Income: {{dailyIncome | currency:'USD':true}}</p>
     </div>
     <div class="col-md-6">
-      <h3>Money For Trip</h3>
       <h4 *ngIf="moneyForTrip">{{moneyForTrip | currency:'USD':true}}</h4>
     </div>
   </div>
