--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container-fluid">
   <h1>{{title}}</h1>
-  <calculator-form></calculator-form>
+  <div class="row">
+    <calculator-form></calculator-form>
+    <summary></summary>
+  </div>
 </div>
