--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<div class="container-fluid">
-  <h1>{{title}}</h1>
-  <div class="row">
-    <calculator-form></calculator-form>
-    <summary></summary>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">{{title}}</a>
+    </div>
   </div>
+</nav>
+<div class="container-fluid">
+  <calculator-form></calculator-form>
+  <summary></summary>
 </div>
