--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">{{title}}</a>
-    </div>
-  </div>
-</nav>
-<div class="container-fluid">
-  <calculator-form></calculator-form>
-</div>
+<h1>{{title}}</h1>
