--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,20 @@
 <mat-toolbar>
-    <h1>{{title}}</h1>
-  </mat-toolbar>
-  
-  <mat-card class="form">
-    <mat-card-title>Calculator Form</mat-card-title>
-    <mat-form-field id="date-field">
-      <mat-label>Months till trip</mat-label>
-      <input matInput>
-    </mat-form-field>
-    <mat-form-field id="cost-field">
-      <mat-label>Trip cost</mat-label>
-      <input matInput>
-    </mat-form-field>
-    <mat-form-field id="savings-field">
-      <mat-label>Savings per month</mat-label>
-      <input matInput>
-    </mat-form-field>
-  </mat-card>
+  <h1>{{title}}</h1>
+</mat-toolbar>
+
+<mat-card class="form">
+  <mat-card-title>Calculator Form</mat-card-title>
+  <mat-form-field id="date-field">
+    <mat-label>Months till trip</mat-label>
+    <input matInput (input)="months=$event.target.value">
+  </mat-form-field>
+  <mat-form-field id="cost-field">
+    <mat-label>Trip cost</mat-label>
+    <input matInput (input)="cost=$event.target.value">
+  </mat-form-field>
+  <mat-form-field id="savings-field">
+    <mat-label>Savings per month</mat-label>
+    <input matInput (input)="savings=$event.target.value">
+  </mat-form-field>
+</mat-card>
   
