--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,15 +6,18 @@
   <mat-card-title>Calculator Form</mat-card-title>
   <mat-form-field id="date-field">
     <mat-label>Months till trip</mat-label>
-    <input matInput (input)="months=$event.target.value">
+    <input matInput #dateInput
+      (input)="onDateInput(dateInput.value)">
   </mat-form-field>
   <mat-form-field id="cost-field">
     <mat-label>Trip cost</mat-label>
-    <input matInput (input)="cost=$event.target.value">
+    <input matInput #costInput
+      (input)="onCostInput(costInput.value)">
   </mat-form-field>
   <mat-form-field id="savings-field">
     <mat-label>Savings per month</mat-label>
-    <input matInput (input)="savings=$event.target.value">
+    <input matInput #savingsRateInput
+      (input)="onSavingsRateInput(savingsRateInput.value)">
   </mat-form-field>
 </mat-card>
   
