--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-home></app-home>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">{{title}}</a>
+</nav>
+
+<div class="container">
+  <app-form></app-form>
+</div>
