--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,4 +1,4 @@
-<div class="card" id="result-field">
+<div class="card transparent-bg mb-3" id="result-field">
   <div class="card-body">
     <p *ngIf="results.savingsAdequate" class="lead">Congrats! You'll have enough for your trip!</p>
     <p *ngIf="!results.savingsAdequate" class="lead">Looks like you'll need to save more for your trip.</p>
